Improve the style of the 'title' class

--- a/omod/src/main/webapp/resources/styles/lfhcforms.css
+++ b/omod/src/main/webapp/resources/styles/lfhcforms.css
@@ -4,6 +4,7 @@
 	font-family: OpenSans, Arial, sans-serif;
 	font-size: 1.1em;
 	font-weight: normal;
+	margin-top: 10px;
 	margin-bottom: 10px;
 }
 
