LFHCFORMS-83: Handle VIEW mode for Doctor Physical Exam Update the style to display "h3" Update the script properViewMode.js
	modified:   phys-exam.html
	modified:   ../scripts/properViewMode.js
	modified:   ../styles/lfhcforms.css

--- a/omod/src/main/webapp/resources/styles/lfhcforms.css
+++ b/omod/src/main/webapp/resources/styles/lfhcforms.css
@@ -8,7 +8,12 @@
 	margin-bottom: 10px;
 }
 
-/* Style to dispaly an "age when given" = "age given on time"  */
+/* Style to dispaly an "age when given" = "age given on time" */
 .onTime {
 	color: green;
+}
+
+/* Style to display a space between an "h3" an a "p" */
+.collapse htmlform h3 {
+	display:inline;
 }
