LFHCDESK-20: Blood transfusion form Add the Blood Transfusion section to the Treatment Plan/Order form Do not write a specific form with order function for now 	deleted:    omod/src/main/webapp/resources/htmlforms/blood-transfusion.html 	modified:   omod/src/main/webapp/resources/htmlforms/treatment.html
	modified:   omod/src/main/webapp/resources/styles/lfhcforms.css
Customize style to display time fields more compact

--- a/omod/src/main/webapp/resources/styles/lfhcforms.css
+++ b/omod/src/main/webapp/resources/styles/lfhcforms.css
@@ -17,3 +17,8 @@
 .collapse htmlform h3 {
 	display:inline;
 }
+
+/* Style to improve display*/
+.simple-form-ui select, .simple-form-ui form select {
+    min-width: 0;
+}
