Correct typo in comments Changes to be committed: 	modified:   omod/src/main/webapp/resources/styles/lfhcforms.css

--- a/omod/src/main/webapp/resources/styles/lfhcforms.css
+++ b/omod/src/main/webapp/resources/styles/lfhcforms.css
@@ -13,7 +13,7 @@
 	color: green;
 }
 
-/* Style to display a space between an "h3" an a "p" */
+/* Style to display a space between an "h3" and a "p" */
 .collapse htmlform h3 {
 	display:inline;
 }
