LFHCDESK-20: Merge Doctor Blood Trans. into Treatment Plan/Order 	deleted:    omod/src/main/webapp/resources/htmlforms/doctor-blood-trans.html 	modified:   omod/src/main/webapp/resources/htmlforms/treatment.html
Improve display of encounter in VIEW mode.
	modified:   omod/src/main/webapp/resources/scripts/handleViewMode.js
	modified:   omod/src/main/webapp/resources/styles/lfhcforms.css

--- a/omod/src/main/webapp/resources/styles/lfhcforms.css
+++ b/omod/src/main/webapp/resources/styles/lfhcforms.css
@@ -51,6 +51,14 @@
 
 /* style for disabled input */
 .input-disabled {
-            background-color:#EBEBE4;
-        }
+    background-color:#EBEBE4;
+}
 
+
+/* style to display fields as blocks */
+
+div.order > span { 
+    display:block;
+}
+
+    
