LFHCDESK-20: typo modifs 	modified:   omod/src/main/webapp/resources/htmlforms/treatment.html 	modified:   omod/src/main/webapp/resources/styles/lfhcforms.css

--- a/omod/src/main/webapp/resources/styles/lfhcforms.css
+++ b/omod/src/main/webapp/resources/styles/lfhcforms.css
@@ -55,8 +55,7 @@
 }
 
 
-/* style to display fields as blocks */
-
+/* style to display "span"s that are immediatly child "div.order" (div with "order" class) as blocks */
 div.order > span { 
     display:block;
 }
