LFHCFORMS-112: Create and display Start Visit with Location fragment
Create fragment (GSP, controller and Javascript)
	new file:   omod/src/main/java/org/openmrs/module/lfhcforms/fragment/controller/StartVisitWithLocationFragmentController.java
	new file:   omod/src/main/webapp/fragments/startVisitWithLocation.gsp
	new file:   omod/src/main/webapp/resources/scripts/startVisitWithLocation.js

Configure extensions
	modified:   omod/src/main/resources/apps/fragmentIncludes_extension.json
	new file:   omod/src/main/resources/apps/overallActions_extension.json

Add styling to dialog
	modified:   omod/src/main/webapp/resources/styles/lfhcforms.css

Add dependencies to appui and emrapi
	modified:   pom.xml
	modified:   omod/pom.xml

--- a/omod/src/main/webapp/resources/styles/lfhcforms.css
+++ b/omod/src/main/webapp/resources/styles/lfhcforms.css
@@ -60,4 +60,9 @@ div.order > span {
     display:block;
 }
 
-    
+
+/* style for option elements */
+option.dialog-drop-down {
+    font-size:1em!important;
+}
+
