--- a/omod/src/main/webapp/resources/styles/lfhcforms.css
+++ b/omod/src/main/webapp/resources/styles/lfhcforms.css
@@ -66,3 +66,8 @@ option.dialog-drop-down {
     font-size:1em!important;
 }
 
+/* style for tags on dashboard, visit widget */
+.shortname{
+    margin-left:5px;
+    min-width:25px!important
+}
