LFHCFORMS-115: Create fragment to display Active Visit with Location 	new file:   omod/src/main/java/org/openmrs/module/lfhcforms/fragment/controller/visit/ActiveVisitStatusWithLocationFragmentController.java 	modified:   omod/src/main/resources/apps/patientHeader_extension.json 	new file:   omod/src/main/webapp/fragments/visit/activeVisitStatusWithLocation.gsp 	modified:   omod/src/main/webapp/resources/styles/lfhcforms.css

--- a/omod/src/main/webapp/resources/styles/lfhcforms.css
+++ b/omod/src/main/webapp/resources/styles/lfhcforms.css
@@ -69,7 +69,7 @@ option.dialog-drop-down {
 /* style for tags on dashboard, visit widget */
 .shortname{
     margin-left:5px;
-    min-width:25px!important
+    min-width:25px!important;
 }
 .clear {
     padding-bottom: 5px;
