--- a/omod/src/main/webapp/resources/styles/lfhcforms.css
+++ b/omod/src/main/webapp/resources/styles/lfhcforms.css
@@ -70,6 +70,10 @@ option.dialog-drop-down {
 .shortname{
     margin-left:5px;
 }
+.tag:hover {
+	cursor:default;
+}
+
 .clear {
     padding-bottom: 5px;
 }
