LFHCDESK-86: Styling of the patient header's registration sections. Hiding of the titles and padding of the whole <div>. 	modified:   omod/src/main/webapp/resources/styles/lfhcforms.css

--- a/omod/src/main/webapp/resources/styles/lfhcforms.css
+++ b/omod/src/main/webapp/resources/styles/lfhcforms.css
@@ -77,3 +77,14 @@ option.dialog-drop-down {
 .clear {
     padding-bottom: 5px;
 }
+
+/* Overriding coreapp's patient header's registration section titles */
+h2[class^="section-title-"] {
+    display: none;
+}
+
+/* Setting some padding on coreapp's patient header's registration sections */
+#contactInfoContent {
+    padding-top: 1%;
+    padding-bottom: 1%;
+}
