LFHCDESK-26: Display tags as full name and improve style 	modified:   omod/src/main/webapp/fragments/visit/visitsWidget.gsp 	modified:   omod/src/main/webapp/pages/visit/activeVisits.gsp 	modified:   omod/src/main/webapp/resources/styles/lfhcforms.css 	modified:   omod/src/main/webapp/resources/styles/visit/activeVisits.css

--- a/omod/src/main/webapp/resources/styles/lfhcforms.css
+++ b/omod/src/main/webapp/resources/styles/lfhcforms.css
@@ -67,13 +67,18 @@ option.dialog-drop-down {
 }
 
 /* style for tags on dashboard, visit widget */
-.shortname{
-    margin-left:5px;
+.tag {
+    display: inline-block;
+    margin: 0 auto;
+    text-align: center;
+    min-width: 66px;
 }
 .tag:hover {
 	cursor:default;
 }
-
+.active {
+	margin-right:5px;
+}
 .clear {
     padding-bottom: 5px;
 }
