--- a/omod/src/main/webapp/resources/styles/lfhcforms.css
+++ b/omod/src/main/webapp/resources/styles/lfhcforms.css
@@ -1,11 +1,12 @@
 /* Override the style when displaying HTML forms in VIEW mode in the Patient Dashboard */ 
-.collapse .title {
+.collapse htmlform .title {
 	color: rgb(0, 147, 132);
 	font-family: OpenSans, Arial, sans-serif;
 	font-size: 1.25em;
 	font-weight: normal;
     margin-top: 10px;
     margin-bottom: 10px;
+    margin-left: -10px;
 }
 
 /* Style to dispaly an "age when given" = "age given on time" */
@@ -15,8 +16,7 @@
 
 /* Styles to display nicer the form, in the encounter list */
 .collapse htmlform fieldset {
-    margin-bottom: 20px;
-    border-bottom: solid 1px #CCC;
+    border: none;
 }
 
 .collapse htmlform p {
@@ -25,12 +25,19 @@
     margin-top: 1px;
 }
 
+.collapse htmlform section {
+    margin-bottom: 10px;
+    border: solid 1px;
+    padding: 20px;
+    padding-top: 8px;
+    padding-left: 30px;
+}
 .collapse htmlform .toggleContainer {
-     border-style:solid;
-     border-width:thin;
-     border-color:#CCC;
-     margin-bottom:10px;
-     padding-left:10px;
+   border-style:solid;
+   border-width:thin;
+   border-color:#CCC;
+   margin-bottom:10px;
+   padding-left:10px;
 
 }
 
@@ -50,9 +57,10 @@
     color:#009384;
     display:block;
     margin-bottom:5px;
+    font-size:0.9em;
 }
 
-.collapse htmlform .emptyFieldset, .collapse htmlform .emptyValue {
+.collapse htmlform .emptyFieldset, .collapse htmlform .emptyValue, .collapse htmlform .emptySection{
     display:none;
 }
 
