LFHCFORMS-127: Review all forms to ensure nice display in view mode (encounter list)
	modified:   omod/src/main/webapp/resources/htmlforms/clinicalnotes.html
	modified:   omod/src/main/webapp/resources/htmlforms/diagnosis.html
	modified:   omod/src/main/webapp/resources/htmlforms/diagnostic-imaging.html
	modified:   omod/src/main/webapp/resources/htmlforms/discharge.html
	modified:   omod/src/main/webapp/resources/htmlforms/dispense-med.html
	modified:   omod/src/main/webapp/resources/htmlforms/financial-assessment.html
	modified:   omod/src/main/webapp/resources/htmlforms/fluidbalance.html
	modified:   omod/src/main/webapp/resources/htmlforms/history.html
	modified:   omod/src/main/webapp/resources/htmlforms/homecare-pre-assessment.html
	modified:   omod/src/main/webapp/resources/htmlforms/homecare-reg.html
	modified:   omod/src/main/webapp/resources/htmlforms/immunity.html
	modified:   omod/src/main/webapp/resources/htmlforms/ipd-nurse.html
	modified:   omod/src/main/webapp/resources/htmlforms/lab-test-order.html
	modified:   omod/src/main/webapp/resources/htmlforms/lines-tubes.html
	modified:   omod/src/main/webapp/resources/htmlforms/med-order.html
	modified:   omod/src/main/webapp/resources/htmlforms/nurse-blood-trans.html
	modified:   omod/src/main/webapp/resources/htmlforms/nvobs.html
	modified:   omod/src/main/webapp/resources/htmlforms/opd-nurse.html
	modified:   omod/src/main/webapp/resources/htmlforms/phys-exam.html
	modified:   omod/src/main/webapp/resources/htmlforms/treatment.html
	modified:   omod/src/main/webapp/resources/htmlforms/triage.html
	modified:   omod/src/main/webapp/resources/htmlforms/wound.html
	modified:   omod/src/main/webapp/resources/scripts/handleViewMode.js
	modified:   omod/src/main/webapp/resources/styles/lfhcforms.css

--- a/omod/src/main/webapp/resources/styles/lfhcforms.css
+++ b/omod/src/main/webapp/resources/styles/lfhcforms.css
@@ -48,6 +48,7 @@
 
 .collapse htmlform .indented, .collapse htmlform p.multiple {
     margin-left: 20px;
+    display:block;
 }
 
 .collapse htmlform legend.multiple {
@@ -59,6 +60,25 @@
 
 .collapse htmlform .emptyFieldset, .collapse htmlform .emptyValue, .collapse htmlform .emptySection, .collapse htmlform .emptyTable {
     display:none;
+}
+
+/* Style to improve display Enter mode of SimpleUI forms */
+.simple-form-ui htmlform div.toggleContainer {
+    border: solid 1px;
+    padding: 20px;
+    margin-bottom:10px;
+}
+.simple-form-ui htmlform h3 {
+    font-size:1em;
+    margin:0px;
+    margin-left:5px;
+}
+.simple-form-ui htmlform section p {
+    margin-bottom: 5px;
+}
+
+.addRemoveButtons {
+     margin-left:80%
 }
 
 /* Style to improve display of select fields (ex: date and time fields)*/
